--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,10 +4,45 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>expense-tracker</title>
+  {{!-- 分頁上的圖示 --}}
+  <link rel="shortcut icon"
+    href="https://借錢推薦.com/asset/images/static/logo.webp"
+    type="image/x-icon" />
+  {{!-- Font awesome --}}
+  <script src="https://kit.fontawesome.com/cf6c814b98.js" crossorigin="anonymous"></script>
+  {{!-- Bootstrap --}}
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+  <title>私房錢錢
+  </title>
 </head>
 
-<body>
-  {{{ body }}}
+<body class="light">
+  <header>
+    <!-- navigation -->
+    <nav class="navbar navbar-dark justify-content-between" style="padding: 12px 16px;
+        background-color: #fd6f59;">
+      <a class="navbar-brand" href="/">
+        <img src="https://借錢推薦.com/asset/images/static/logo.webp" width="40" height="40" class="d-inline-block align-top"
+          alt="好。吃">
+        <span style="font-size: 24.5px;">{{#if isAuthenticated}} &nbsp; {{ user.name }} 💛 {{/if}} 把 錢 錢 變 成 喜 歡 的 樣 子</span>
+      </a>
+      {{#if isAuthenticated}}
+      <a href="/users/logout" class="btn btn-outline-light">Logout</a>
+      {{else}}
+      <a href="/users/login" class="btn btn-outline-light">Login</a>
+      {{/if}}
+    </nav>
+  </header>
+
+  <main>
+    <div class="container mt-3">
+
+      {{{ body }}}
+      
+    </div>
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 </body>
 </html>
