--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -25,7 +25,7 @@
       <a class="navbar-brand" href="/">
         <img src="https://借錢推薦.com/asset/images/static/logo.webp" width="40" height="40" class="d-inline-block align-top"
           alt="好。吃">
-        <span style="font-size: 24.5px;">{{#if isAuthenticated}} &nbsp; {{ user.name }} 💛 {{/if}} 把 錢 錢 變 成 喜 歡 的 樣 子</span>
+        <span style="font-size: 24.5px;">{{#if isAuthenticated}} &nbsp; {{ user.name }} 💛 {{/if}} 把 錢 錢 變 成 喜 歡 的 模 樣</span>
       </a>
       {{#if isAuthenticated}}
       <a href="/users/logout" class="btn btn-outline-light">Logout</a>
