feat: add update record function & add handlebars helper

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -49,7 +49,7 @@
           </div>
 
           <div class="col-3 align-self-center">
-            <a class="btn btn-outline-warning mx-3" href="#">修改</a>
+            <a class="btn btn-outline-warning mx-3" href="./records/{{this._id}}/edit">編輯</a>
             <form action="#" method="POST" style="display: inline;">
               <button class="btn btn-outline-danger" type="submit">刪除</button>
             </form>
@@ -63,7 +63,7 @@
   {{!-- 4、按鈕：新增支出 --}}
   <div class="row col-8 p-2 my-5">
     <div class="d-grid col-6 gap-2 mx-auto">
-      <a href="/records/new">
+      <a href="./records/new">
         <button class="btn w-100" style="background-color: #fd6f59; color:aliceblue;" type="button">新增支出</button>
       </a>
     </div>
