--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -13,12 +13,12 @@
       <label for="category" class="form-label">分類<span class="text-danger">*</span></label>
       
       <select type="text" class="form-control" id="category" placeholder="Select" list="categoryOptions" name="category" required />
-        <option>Select</option>
-        <option>家居物業</option>
-        <option>交通出行</option>
-        <option>休閒娛樂</option>
-        <option>餐飲食品</option>
-        <option>其他</option>
+        <option value="">Select</option>
+        <option value="1">家居物業</option>
+        <option value="2">交通出行</option>
+        <option value="3" >休閒娛樂</option>
+        <option value="4">餐飲食品</option>
+        <option value="5">其他</option>
       </select>
     </div>
     
