--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,6 +1,6 @@
 <h1 class="mb-1 record-show-title p-2" style="color: #ca2a0e;">編輯【 你喜歡的模樣 】</h1>
 <div class="container">
-  <form action="/records/{{ record._id }}/edit" method="POST">
+  <form action="/records/{{ record._id }}?_method=PUT" method="POST">
     <div class="mb-3">
       <label for="name" class="form-label">名稱<span class="text-danger">*</span></label>
       <input type="text" class="form-control" id="name" placeholder="帝寶別墅" name="name" value="{{ record.name }}" required />
