--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -52,7 +52,7 @@
             {{!-- 編輯按鈕 --}}
             <a class="btn btn-outline-warning mx-3" href="./records/{{this._id}}/edit">編輯</a>
             {{!-- 刪除按鈕 --}}
-            <form action="./records/{{this._id}}/delete" method="POST" style="display: inline;">
+            <form action="./records/{{this._id}}?_method=DELETE" method="POST" style="display: inline;">
               <button class="btn btn-outline-danger" type="submit">刪除</button>
             </form>
 
