--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,24 +1,25 @@
 <div class="container-sm mt-3 ms-4 px-md-5">
-  <div class="row col-8 ms-2 pe-0">
+  <div class="row col-8 ps-2 pe-0">
     {{!-- 1、下拉選單：分類 --}}
-    <div class="row dropdown my-3 d-flex justify-content-center">
-      <button class="btn btn-outline-secondary w-100 dropdown-toggle d-flex justify-content-center" type="button" id="dropdownMenuButton1"
-        data-bs-toggle="dropdown" aria-expanded="false">
-        &nbsp;&nbsp; 類 &nbsp; 別 &nbsp;&nbsp;
-      </button>
-      <ul class="dropdown-menu w-80" aria-labelledby="dropdownMenuButton1">
-        <li><a class="dropdown-item" href="#">家居物業</a></li>
-        <li><a class="dropdown-item" href="#">交通出行</a></li>
-        <li><a class="dropdown-item" href="#">休閒娛樂</a></li>
-        <li><a class="dropdown-item" href="#">餐飲食品</a></li>
-        <li><a class="dropdown-item" href="#">其他</a></li>
-      </ul>
-    </div>
+    <form action="/search/?categorySearch={{id}} " method="GET">
+      <div class="row mt-3 mb-5 d-flex justify-content-center">
+        <select type="submit" class="form-select text-center" id="categorySearch" 
+          name="categoryId" style="background-color: #fd6f59; color:aliceblue;" 
+          onchange="this.form.submit()" required />
+        <option value="">類別</option>
+        <option value="1">家居物業</option>
+        <option value="2">交通出行</option>
+        <option value="3">休閒娛樂</option>
+        <option value="4">餐飲食品</option>
+        <option value="5">其他</option>
+        </select>
+      </div>
+    </form>
     
     {{!-- 2、總金額 --}}
     <div class="row blockquote mb-0 ms-1">
       <p class="row mb-0">兌現的總金額:</p>
-      <p class="text-end mb-2 pb-2" style="line-height: 100% ; color: #eb346e; font-size: 80px;">{{ sum }}</p>
+      <p class="text-end mb-2 pb-2" style="line-height: 100% ; color: #eb346e; font-size: 80px;">{{sum}}</p>
     </div>
   </div>
 
@@ -30,11 +31,18 @@
         <div class="row">
           <div class="col-8 py-2 d-flex justify-content-center align-items-center d-inline-block border rounded">
             {{!-- icon --}}
-            <div class="col-2">
-              <i class="fa-solid fa-utensils d-inline-block pe-3" style="font-size: 53px; color:rgb(164, 228, 246);"></i>
+            <div class="col-2 pe-1 d-flex justify-content-center">
+              <i class="fa-solid 
+              {{#ifMatch 1 this.category }}fa-house{{/ifMatch}}
+              {{#ifMatch 2 this.category }}fa-face-grin-beam{{/ifMatch}}
+              {{#ifMatch 3 this.category }}fa-face-grin-beam{{/ifMatch}}
+              {{#ifMatch 4 this.category }}fa-utensils{{/ifMatch}}
+              {{#ifMatch 5 this.category }}fa-pen{{/ifMatch}} 
+              d-inline-block" 
+              style="font-size: 53px; color:rgb(164, 228, 246);"></i>
             </div>
             {{!-- 項目及新增日期 --}}
-            <div class="col-5 ">
+            <div class="col-5 ps-2">
               <h4 class="pb-0 pt-1" style="font-size: 27px; color:rgb(108, 100, 100);">
                 {{this.name}}
               </h4>
@@ -50,7 +58,7 @@
 
           <div class="col-3 align-self-center">
             {{!-- 編輯按鈕 --}}
-            <a class="btn btn-outline-warning mx-3" href="./records/{{this._id}}/edit">編輯</a>
+            <a class="btn btn-outline-warning mx-3" href="../records/{{this._id}}/edit">編輯</a>
             {{!-- 刪除按鈕 --}}
             <form action="./records/{{this._id}}?_method=DELETE" method="POST" style="display: inline;">
               <button class="btn btn-outline-danger" type="submit">刪除</button>
@@ -66,7 +74,7 @@
   {{!-- 4、按鈕：新增支出 --}}
   <div class="row col-8 p-2 my-5">
     <div class="d-grid col-6 gap-2 mx-auto">
-      <a href="./records/new">
+      <a href="../records/new">
         <button class="btn w-100" style="background-color: #fd6f59; color:aliceblue;" type="button">新增支出</button>
       </a>
     </div>
