--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,15 +3,15 @@
     {{!-- 1、下拉選單：分類 --}}
     <form action="/search/?categorySearch={{id}} " method="GET">
       <div class="row mt-3 mb-5 d-flex justify-content-center">
-        <select type="submit" class="form-select text-center" id="categorySearch" 
-          name="categoryId" style="background-color: #fd6f59; color:aliceblue;" 
+        <select type="submit" class="btn btn-outline-warning text-center" id="categorySearch" 
+          name="categoryId" style="" 
           onchange="this.form.submit()" required />
-        <option value="">類別</option>
-        <option value="1">家居物業</option>
-        <option value="2">交通出行</option>
-        <option value="3">休閒娛樂</option>
-        <option value="4">餐飲食品</option>
-        <option value="5">其他</option>
+        <option value="">篩 選</option>
+        <option value="1" {{#ifMatch 1 id }}selected{{/ifMatch}}>家居物業</option>
+        <option value="2" {{#ifMatch 2 id }}selected{{/ifMatch}}>交通出行</option>
+        <option value="3" {{#ifMatch 3 id }}selected{{/ifMatch}}>休閒娛樂</option>
+        <option value="4" {{#ifMatch 4 id }}selected{{/ifMatch}}>餐飲食品</option>
+        <option value="5" {{#ifMatch 5 id }}selected{{/ifMatch}}>其他</option>
         </select>
       </div>
     </form>
