--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,9 +8,8 @@
   <link rel="shortcut icon"
     href="https://借錢推薦.com/asset/images/static/logo.webp"
     type="image/x-icon" />
-  {{!-- Bootstrap --}}
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+  {{!-- Bootswatch --}}
+  <link rel="stylesheet" href="https://bootswatch.com/5/minty/bootstrap.min.css">
   {{!-- Font awesome --}}
   <script src="https://kit.fontawesome.com/cf6c814b98.js" crossorigin="anonymous"></script>
   <title>私房錢錢
@@ -20,8 +19,7 @@
 <body class="light">
   <header>
     <!-- navigation -->
-    <nav class="navbar navbar-dark justify-content-between" style="padding: 12px 16px;
-        background-color: #fd6f59;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between" style="padding: 12px 16px;">
       <a class="navbar-brand" href="/">
         <img src="https://借錢推薦.com/asset/images/static/logo.webp" width="40" height="40" class="d-inline-block align-top"
           alt="好。吃">
