--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,8 @@
 <div class="row mt-5">
   <div class="col-md-6 m-auto">
     <div class="card card-body">
-      <h1 class="text-center mt-3">Login</h1>
-
+      <h1 class="text-center mt-3 pb-2">Login</h1>
+      {{> message}}
       <form action="/users/login" method="POST">
         <div class="mb-3">
           <label for="email" class="mb-2">Email</label>
@@ -12,7 +12,7 @@
           <label for="password" class="mb-2">Password</label>
           <input type="password" id="password" name="password" class="form-control" placeholder="Enter Password">
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
+        <button type="submit" class="btn btn-block" style="background-color: rgba(177, 147, 233, 0.719);">Login</button>
         <a href="/auth/facebook" class="btn btn-info btn-block">Facebook Login</a>
       </form>
       <p class="lead mt-4">
