--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -2,6 +2,7 @@
   <div class="col-md-6 m-auto">
     <div class="card card-body">
       <h1 class="text-center mt-3">Register</h1>
+      {{> message}}
       <form action="/users/register" method="POST">
         <div class="mb-3">
           <label for="name" class="mb-2">Name</label>
@@ -20,7 +21,7 @@
           <input type="password" id="confirmPassword" name="confirmPassword" class="form-control"
             placeholder="Confirm Password" value="{{ confirmPassword }}">
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Register</button>
+        <button type="submit" class="btn btn-block" style="background-color: rgba(177, 147, 233, 0.719);">Register</button>
         <a href="/auth/facebook" class="btn btn-info btn-block">Facebook Login</a>
       </form>
       <p class="lead mt-4">
