--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -33,11 +33,11 @@
             {{!-- icon --}}
             <div class="col-2 pe-1 d-flex justify-content-center">
               <i class="fa-solid 
-              {{#ifMatch 1 this.category }}fa-house{{/ifMatch}}
-              {{#ifMatch 2 this.category }}fa-van-shuttle{{/ifMatch}}
-              {{#ifMatch 3 this.category }}fa-face-grin-beam{{/ifMatch}}
-              {{#ifMatch 4 this.category }}fa-utensils{{/ifMatch}}
-              {{#ifMatch 5 this.category }}fa-pen{{/ifMatch}} 
+              {{#ifMatch 1 this.categoryId }}fa-house{{/ifMatch}}
+              {{#ifMatch 2 this.categoryId }}fa-van-shuttle{{/ifMatch}}
+              {{#ifMatch 3 this.categoryId }}fa-face-grin-beam{{/ifMatch}}
+              {{#ifMatch 4 this.categoryId }}fa-utensils{{/ifMatch}}
+              {{#ifMatch 5 this.categoryId }}fa-pen{{/ifMatch}} 
               d-inline-block" 
               style="font-size: 53px; color:rgba(171, 144, 238, 0.449);"></i>
             </div>
