--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -12,7 +12,7 @@
     <div class="mb-3">
       <label for="category" class="form-label">分類<span class="text-danger">*</span></label>
       
-      <select type="text" class="form-control" id="category" placeholder="Select" list="categoryOptions" name="category" required />
+      <select type="text" class="form-control" id="category" placeholder="Select" list="categoryOptions" name="categoryId" required />
         <option value="">Select</option>
         <option value="1">家居物業</option>
         <option value="2">交通出行</option>
